@@ -76,13 +76,13 @@ function BUIT:CreateTokensHolder()
 		end	
 	end)
 
-	if( Tokens[1] ) then
+	--[[if( Tokens[1] ) then
 		for i = 1, getn( Tokens ) do
 			Tokens[i]:Kill()
 			tholder.backdrop:Kill()
 		end
 		wipe( Tokens )
-	end
+	end]]
 
 	local num = 0
 	for i, v in ipairs( currency ) do
@@ -103,6 +103,13 @@ function BUIT:CreateTokensHolder()
 end
 
 function BUIT:UpdateTokens()
+	if( Tokens[1] ) then
+		for i = 1, getn( Tokens ) do
+			Tokens[i]:Kill()
+			--tokenHolder.backdrop:Kill()
+		end
+		wipe( Tokens )
+	end
 
 	for i, v in ipairs(currency) do
 		local id, max = unpack(v)
